<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">


    <LinearLayout
        android:id="@+id/linearSignUp"
        style="@style/groupStylelight_blue_A100"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLoginScreenOn"
            style="@style/groupStylelight_blue_A100"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnArrowleft"
                android:layout_width="@dimen/_40pxh"
                android:layout_height="@dimen/_40pxh"
                android:layout_gravity="start"
                android:layout_marginTop="15dp"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginEnd="@dimen/_20pxh"
                android:background="@drawable/rectangle_bg_black_900_63_radius_10"
                android:paddingHorizontal="@dimen/_14pxh"
                android:paddingVertical="@dimen/_14pxv"
                android:scaleType="fitCenter"
                android:src="@drawable/img_arrowleft"
                tools:ignore="ContentDescription" />

            <FrameLayout
                android:id="@+id/frameStackcreatenewacco"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_769pxv"
                android:layout_marginTop="@dimen/_15pxv"
                android:gravity="start">


                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="779dp"
                    android:layout_gravity="start"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/img_1"
                    android:transitionName="transitionName"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:id="@+id/linearColumncreatenewacco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginStart="@dimen/_19pxh"
                    android:layout_marginTop="65dp"
                    android:layout_marginEnd="@dimen/_19pxh"
                    android:layout_marginBottom="@dimen/_66pxv"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtview1"
                        style="@style/txtAnybodyregular18"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:ellipsize="end"
                        android:transitionName="transitionName2"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:singleLine="true"
                        android:text="@string/msg_create_new_acco"
                        tools:text="@string/msg_create_new_acco" />

                    <TextView
                        android:id="@+id/txtView2"
                        style="@style/txtAnybodyregular14_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_11pxv"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:ellipsize="end"
                        android:transitionName="transitionName3"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:singleLine="true"
                        android:text="@string/msg_fill_up_all_det"
                        tools:text="@string/msg_fill_up_all_det" />

                    <EditText
                        android:id="@+id/txtName"
                        style="@style/etSolidRounded"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:transitionName="transitionName4"
                        android:layout_marginTop="@dimen/_21pxv"
                        android:background="@drawable/rectangle_bg_gray_100_radius_10"
                        android:ellipsize="end"
                        android:hint="@string/lbl_your_name"
                        android:inputType="text"
                        android:paddingStart="@dimen/_12pxh"
                        android:paddingTop="@dimen/_14pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingBottom="@dimen/_16pxv"
                        android:singleLine="true"
                        android:textColorHint="@color/black_900_7e"
                        tools:ignore="Autofill" />

                    <EditText
                        android:id="@+id/signupEmail"
                        style="@style/etSolidRounded"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:transitionName="transitionName5"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:background="@drawable/rectangle_bg_gray_100_radius_10"
                        android:ellipsize="end"
                        android:hint="Enter Your Email"
                        android:inputType="text"
                        android:paddingStart="@dimen/_12pxh"
                        android:paddingTop="@dimen/_14pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingBottom="@dimen/_16pxv"
                        android:singleLine="true"
                        android:textColorHint="@color/black_900_7e"
                        tools:ignore="Autofill" />

                    <EditText
                        android:id="@+id/signupPassword"
                        style="@style/etSolidRounded"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:transitionName="transitionName6"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:background="@drawable/rectangle_bg_gray_100_radius_10"
                        android:ellipsize="end"
                        android:hint="@string/lbl_create_password"
                        android:inputType="textPassword"
                        android:paddingStart="@dimen/_12pxh"
                        android:paddingTop="@dimen/_14pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingBottom="@dimen/_16pxv"
                        android:singleLine="true"
                        android:textColorHint="@color/black_900_7e"
                        tools:ignore="Autofill" />

                    <EditText
                        android:id="@+id/signupConfirm"
                        style="@style/etSolidRounded"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:transitionName="transitionName7"
                        android:layout_marginTop="@dimen/_13pxv"
                        android:background="@drawable/rectangle_bg_gray_100_radius_10"
                        android:ellipsize="end"
                        android:hint="@string/msg_confirm_passwor"
                        android:inputType="textPassword"
                        android:paddingStart="@dimen/_12pxh"
                        android:paddingTop="@dimen/_14pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingBottom="@dimen/_16pxv"
                        android:singleLine="true"
                        android:textColorHint="@color/black_900_7e"
                        tools:ignore="Autofill" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSignUp"
                        style="@style/btnSolidRounded"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:transitionName="transitionName8"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:paddingStart="@dimen/_30pxh"
                        android:paddingTop="@dimen/_14pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingBottom="@dimen/_14pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_sign_up"
                        android:textAllCaps="false"
                        tools:text="@string/lbl_sign_up" />

                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>